--- a/src/app/composants/user-sheet/user-sheet.component.html
+++ b/src/app/composants/user-sheet/user-sheet.component.html
@@ -4,7 +4,7 @@
     <ion-header>
       <ion-toolbar>
         <ion-title> Fiche utilisateur : {{user.nom}} {{user.prenom}}</ion-title>
-        <ion-icon button slot="end" name="close-outline" size="large" (click)="userState=false; log(userState)">
+        <ion-icon button slot="end" name="close-outline" size="large" (click)="userState=false;">
         </ion-icon>
       </ion-toolbar>
     </ion-header>
