--- a/src/app/pages/tool-request/_components/control3-d/control.page.html
+++ b/src/app/pages/tool-request/_components/control3-d/control.page.html
@@ -3,7 +3,8 @@
     <ion-title>{{page.title}}</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content [fullscreen]="false" color=light>
+<ion-content [fullscreen]="true" color=light>
+  <!-- TODO Revoir la mise en page scroll partie droite -->
   <div class="content-container">
     <div class="control-form">
 
@@ -13,24 +14,23 @@
 
       <form class="main-form" [formGroup]="controlForm" (ngSubmit)="submitControlForm()">
 
-        <!-- ******************************* -->
-        <!-- *******   L'OUTILLAGE   ******* -->
-        <!-- ******************************* -->
-
-
-        <ion-card color=light padding>
-          <ion-card-header>
-            <ion-card-title class="ion-text-uppercase">L'outillage</ion-card-title>
-          </ion-card-header>
-
+        <div class="left-side">
           <!-- ******************************* -->
-          <!-- **********   TOOL   *********** -->
+          <!-- *******   L'OUTILLAGE   ******* -->
           <!-- ******************************* -->
+          <ion-card color=light padding>
+            <ion-card-header>
+              <ion-card-title class="ion-text-uppercase">L'outillage</ion-card-title>
+            </ion-card-header>
+
+            <!-- ******************************* -->
+            <!-- **********   TOOL   *********** -->
+            <!-- ******************************* -->
 
 
-          <app-tool-input formControlName="outillage">
-          </app-tool-input>
-          <!-- <ion-item>
+            <app-tool-input formControlName="outillage">
+            </app-tool-input>
+            <!-- <ion-item>
                             <ion-label>Outillage SAP :</ion-label>
                             <ion-input formControlName="outillage" #toolNumber type="text" placeholder="n°OT SAP ou n° Equipement SAP" (change)="toolOnChange(toolNumber.value.toString())"></ion-input>
                             <ion-spinner *ngIf="toolIsLoading" name="bubbles"></ion-spinner>
@@ -39,207 +39,210 @@
 
 
 
-          <!-- ******************************* -->
-          <!-- ****   DATE MISE A DISPO   **** -->
-          <!-- ******************************* -->
-          <ion-item button id="open-modal">
-            <ion-label>Date de mise à disposition au service outillage</ion-label>
-            <ion-text slot="end">
-              {{controlForm.value.dispoTool | date:"dd/MM/yyyy"}}</ion-text>
+            <!-- ******************************* -->
+            <!-- ****   DATE MISE A DISPO   **** -->
+            <!-- ******************************* -->
+            <ion-item button id="open-modal">
+              <ion-label>Date de mise à disposition au service outillage</ion-label>
+              <ion-text slot="end">
+                {{controlForm.value.dispoTool | date:"dd/MM/yyyy"}}</ion-text>
 
-            <ion-icon slot=end icon="calendar-outline"></ion-icon>
-            <ion-modal trigger="open-modal">
-              <ng-template>
-                <ion-content>
-                  <ion-datetime #dispoTool presentation="date" formControlName="dispoOut"
-                    display-format="EEEE DD.MMMM.YYYY"
-                    (ionChange)="controlForm.value.dispoOut= dateValue(dispoTool.value)">
-                    <div slot="title">Date de mise à disposition au service outillage</div>
-                  </ion-datetime>
-                </ion-content>
-              </ng-template>
-            </ion-modal>
-          </ion-item>
+              <ion-icon slot=end icon="calendar-outline"></ion-icon>
+              <ion-modal trigger="open-modal">
+                <ng-template>
+                  <ion-content>
+                    <ion-datetime #dispoTool presentation="date" formControlName="dispoOut"
+                      display-format="EEEE DD.MMMM.YYYY"
+                      (ionChange)="controlForm.value.dispoOut= dateValue(dispoTool.value)">
+                      <div slot="title">Date de mise à disposition au service outillage</div>
+                    </ion-datetime>
+                  </ion-content>
+                </ng-template>
+              </ion-modal>
+            </ion-item>
 
-
-          <!-- ******************************* -->
-          <!-- ********   LA PIECE   ********* -->
-          <!-- ******************************* -->
-          <div class="flex-row">
 
             <!-- ******************************* -->
-            <!-- ********   reference   ******** -->
+            <!-- ********   LA PIECE   ********* -->
+            <!-- ******************************* -->
+            <div class="flex-row">
+
+              <!-- ******************************* -->
+              <!-- ********   reference   ******** -->
+              <!-- ******************************* -->
+
+
+              <ion-item>
+                <ion-label>Référence
+                  <ion-text color="danger">*</ion-text>
+                </ion-label>
+                <ion-input required #refPlan formControlName="refPlan" type="text" placeholder="indiquer n° de plan">
+                </ion-input>
+              </ion-item>
+
+              <!-- ******************************* -->
+              <!-- ********   INDICE   *********** -->
+              <!-- ******************************* -->
+
+
+              <ion-item>
+                <ion-label>Indice plan
+                  <ion-text color="danger">*</ion-text>
+                </ion-label>
+                <ion-input required #indPlan formControlName="indPlan" type="text"
+                  placeholder="indiquer l 'indice du plan"></ion-input>
+              </ion-item>
+            </div>
+
+
+            <!-- ******************************* -->
+            <!-- *******   CHEMIN CAO   ******** -->
             <!-- ******************************* -->
 
 
             <ion-item>
-              <ion-label>Référence
-                <ion-text color="danger">*</ion-text>
+              <ion-label>Format du modèle 3D fourni si nécessaire
+                <!-- <ion-text color="danger">*</ion-text> -->
               </ion-label>
-              <ion-input required #refPlan formControlName="refPlan" type="text" placeholder="indiquer n° de plan">
+              <ion-input #caoPath formControlName="cheminCAO" type="text"
+                placeholder="Fournir CAO et / ou chemin d’accès">
               </ion-input>
             </ion-item>
+          </ion-card>
+
+          <!-- ******************************* -->
+          <!-- *******   LE RAPPORT   ******** -->
+          <!-- ******************************* -->
+          <ion-card>
+            <ion-card-header color=light>
+              <ion-card-title class="ion-text-uppercase">Le rapport</ion-card-title>
+            </ion-card-header>
+            <!-- ******************************* -->
+            <!-- *******   DATE BUTOIR   ******* -->
+            <!-- ******************************* -->
+
+
+            <ion-item button id="open-date-butoir">
+              <ion-label>Date butoir demandée</ion-label>
+              <ion-icon slot=end icon="calendar-outline"></ion-icon>
+              <ion-text slot="end">
+                {{controlForm.value.dateBesoin | date:"dd/MM/yyyy"}}</ion-text>
+              <!-- <ion-button id="open-modal">Open Datetime Modal</ion-button> -->
+              <ion-modal trigger="open-date-butoir">
+                <ng-template>
+                  <ion-content>
+                    <ion-datetime #needDate presentation="date" formControlName="dateBesoin"
+                      display-format="EEEE DD.MMMM.YYYY">
+                      <div slot="title">Date butoir demandée</div>
+                    </ion-datetime>
+                  </ion-content>
+                </ng-template>
+              </ion-modal>
+            </ion-item>
+
 
             <!-- ******************************* -->
-            <!-- ********   INDICE   *********** -->
+            <!-- *********   OI eOTP   ********* -->
             <!-- ******************************* -->
 
 
             <ion-item>
-              <ion-label>Indice plan
+              <ion-label>Oi ou Eotp
                 <ion-text color="danger">*</ion-text>
               </ion-label>
-              <ion-input required #indPlan formControlName="indPlan" type="text"
-                placeholder="indiquer l 'indice du plan"></ion-input>
+              <ion-input #ligneBudgetaire required formControlName="ligneBudgetaire" type="text"
+                placeholder="Indiquez le n° pour imputation"></ion-input>
             </ion-item>
-          </div>
+
+            <!-- ******************************* -->
+            <!-- ******   TYPE RAPPORT   ******* -->
+            <!-- ******************************* -->
 
 
-          <!-- ******************************* -->
-          <!-- *******   CHEMIN CAO   ******** -->
-          <!-- ******************************* -->
+            <ion-item>
+              <ion-label>Types de rapport</ion-label>
+              <ion-select required #typeRapportSelect formControlName="typeRapport">
+                <ion-select-option *ngFor="let type of typeRapport| keyvalue" [value]="type.value">{{type.value}}
+                </ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-card>
 
 
-          <ion-item>
-            <ion-label>Format du modèle 3D fourni si nécessaire
-              <!-- <ion-text color="danger">*</ion-text> -->
-            </ion-label>
-            <ion-input #caoPath formControlName="cheminCAO" type="text"
-              placeholder="Fournir CAO et / ou chemin d’accès">
-            </ion-input>
-
-          </ion-item>
-        </ion-card>
-
-
+        </div>
         <!-- ******************************* -->
         <!-- ******   LE CONTROLE   ******** -->
         <!-- ******************************* -->
-
-
         <ion-card>
           <ion-card-header color=light>
             <ion-card-title class="ion-text-uppercase">Le contrôle</ion-card-title>
           </ion-card-header>
-
-          <!-- ******************************* -->
-          <!-- ******   DESCRIPTION   ******** -->
-          <!-- ******************************* -->
-
-
-          <div fill="outline" lines=none class="vertical">
-            <ion-item>
-              <ion-label>But du contrôle, de l'essai ou de l 'expertise
-                <ion-text color="danger">*</ion-text>
-              </ion-label>
-            </ion-item>
-            <!-- base_url: '/tinymce',
+          <ion-card-content>
+            <!-- ******************************* -->
+            <!-- ******   DESCRIPTION   ******** -->
+            <!-- ******************************* -->
+            <div class="vertical">
+              <ion-item lines="none">
+                <ion-label>But du contrôle, de l'essai ou de l 'expertise
+                  <ion-text color="danger">*</ion-text>
+                </ion-label>
+              </ion-item>
+              <!-- base_url: '/tinymce',
                       suffix: '.min', -->
-            <editor #ctrlReasons slot="" formControlName="description" [init]="{
+              <editor #ctrlReasons slot="" formControlName="description" [init]="{
                       plugins: 'lists link image table wordcount',
                       menubar: false,
-
                       statusbar:false,
                       object_resizing: true,
-                      placeholder:'Descriptif de la mesure demandée (contrôle réception, suite à choc, déménagement d’outillage ou autre)'
+                      placeholder:'Descriptif de la mesure demandée (contrôle réception, suite à choc, déménagement d’outillage ou autre)',
+                      height:150,
+                      inline: false
                     }"></editor>
-            <!-- <ion-textarea autoGrow required #ctrlReasons formControlName=" ctrlReasons " type="text " (ionChange)="test() "></ion-textarea> -->
-            <!-- <ion-note></ion-note> -->
-          </div>
+              <!-- <ion-textarea autoGrow required #ctrlReasons formControlName=" ctrlReasons " type="text " (ionChange)="test() "></ion-textarea> -->
+              <!-- <ion-note></ion-note> -->
+            </div>
 
 
-          <!-- ******************************* -->
-          <!-- *********   DETAIL   ********** -->
-          <!-- ******************************* -->
-
-
-          <div class="vertical">
-            <ion-item>
-              <ion-label>Détails de la mesure
-                <ion-text color="danger">*</ion-text>
-              </ion-label>
-            </ion-item>
-            <editor #ctrlReasons slot="" formControlName="detailsControle" [init]="{
+            <!-- ******************************* -->
+            <!-- *********   DETAIL   ********** -->
+            <!-- ******************************* -->
+            <div class="vertical">
+              <ion-item lines="none">
+                <ion-label>Détails de la mesure
+                  <ion-text color="danger">*</ion-text>
+                </ion-label>
+              </ion-item>
+              <editor #ctrlReasons slot="" formControlName="detailsControle" [init]="{
               plugins: 'lists link image table wordcount',
               menubar: false,
               statusbar:false,
-              placeholder:'lieux, référentiel...'
+              placeholder:'lieux, référentiel...',
+              height:150
             }"></editor>
-            <!-- <ion-textarea autoGrow required #ctrlDetails formControlName="ctrlDetails" type="text"
+              <!-- <ion-textarea autoGrow required #ctrlDetails formControlName="ctrlDetails" type="text"
               placeholder="lieux, référentiel..."></ion-textarea> -->
-          </div>
+            </div>
 
-          <!-- ******************************* -->
-          <!-- **  PRECISION / TOLERANCES   ** -->
-          <!-- ******************************* -->
-
-
-          <div class="vertical">
-            <ion-item>
-              <ion-label>Précision demandée et attendue
-                <ion-text color="danger">*</ion-text>
-              </ion-label>
-            </ion-item>
-            <editor #ctrlReasons slot="" formControlName="tolerances" [init]="{
+            <!-- ******************************* -->
+            <!-- **  PRECISION / TOLERANCES   ** -->
+            <!-- ******************************* -->
+            <div class="vertical">
+              <ion-item lines="none">
+                <ion-label>Précision demandée et attendue
+                  <ion-text color="danger">*</ion-text>
+                </ion-label>
+              </ion-item>
+              <editor #ctrlReasons slot="" formControlName="tolerances" [init]="{
               plugins: 'lists link image table wordcount',
               menubar: false,
               statusbar:false,
-              placeholder:'IT plans et spécifications de définition'
+              placeholder:'IT plans et spécifications de définition',
+              height:150
             }"></editor>
-            <!-- <ion-textarea autoGrow required #tolerance formControlName="precisionTolerances" type="text"
+              <!-- <ion-textarea autoGrow required #tolerance formControlName="precisionTolerances" type="text"
               placeholder="IT plans et spécifications de définition"></ion-textarea> -->
-          </div>
-
-
-          <!-- ******************************* -->
-          <!-- *******   DATE BUTOIR   ******* -->
-          <!-- ******************************* -->
-
-
-          <ion-item button id="open-date-butoir">
-            <ion-label>Date butoir demandée</ion-label>
-            <ion-icon slot=end icon="calendar-outline"></ion-icon>
-            <ion-text slot="end">
-              {{controlForm.value.dateBesoin | date:"dd/MM/yyyy"}}</ion-text>
-            <!-- <ion-button id="open-modal">Open Datetime Modal</ion-button> -->
-            <ion-modal trigger="open-date-butoir">
-              <ng-template>
-                <ion-content>
-                  <ion-datetime #needDate presentation="date" formControlName="dateBesoin"
-                    display-format="EEEE DD.MMMM.YYYY">
-                    <div slot="title">Date butoir demandée</div>
-                  </ion-datetime>
-                </ion-content>
-              </ng-template>
-            </ion-modal>
-          </ion-item>
-
-
-          <!-- ******************************* -->
-          <!-- *********   OI eOTP   ********* -->
-          <!-- ******************************* -->
-
-
-          <ion-item>
-            <ion-label>Oi ou Eotp
-              <ion-text color="danger">*</ion-text>
-            </ion-label>
-            <ion-input #ligneBudgetaire required formControlName="ligneBudgetaire" type="text"
-              placeholder="Indiquez le n° pour imputation"></ion-input>
-          </ion-item>
-
-          <!-- ******************************* -->
-          <!-- ******   TYPE RAPPORT   ******* -->
-          <!-- ******************************* -->
-
-
-          <ion-item>
-            <ion-label>Types de rapport</ion-label>
-            <ion-select required #typeRapportSelect formControlName="typeRapport">
-              <ion-select-option *ngFor="let type of typeRapport| keyvalue" [value]="type.value">{{type.value}}
-              </ion-select-option>
-            </ion-select>
-          </ion-item>
+            </div>
+          </ion-card-content>
         </ion-card>
 
         <!-- *********************************************************************************************** -->
@@ -247,7 +250,6 @@
         <!-- ******************************* -->
         <!-- *******   LA MESURE   ********* -->
         <!-- ******************************* -->
-
         <ion-card *ngIf="canManage">
           <ion-card-header color=light>
             <ion-card-title class="ion-text-uppercase">La Mesure</ion-card-title>
@@ -261,13 +263,13 @@
             <!-- TODO intervention -->
             <!-- <ion-text slot="end " *ngIf="toolRequest?.controle?.interventionDate">
               {{toolRequest?.controle?.interventionDate | date:"dd/MM/yyyy"}}</ion-text> -->
-            <!-- <ion-button id="open-modal ">Open Datetime Modal</ion-button> -->
+            <ion-button id="open-modal ">Open Datetime Modal</ion-button>
             <ion-modal trigger="open-date-interv ">
               <ng-template>
                 <ion-content>
-                  <!-- <ion-datetime #interventionDate presentation="date" formControlName="interventionDate"
-                    display-format="EEEE DD.MMMM.YYYY"> -->
-                  <ion-datetime #interventionDate presentation="date" display-format="EEEE DD.MMMM.YYYY">
+                  <ion-datetime #interventionDate presentation="date" formControlName="interventionDate"
+                    display-format="EEEE DD.MMMM.YYYY">
+
                     <div slot="title">Date d'intervention</div>
                   </ion-datetime>
                 </ion-content>
@@ -293,13 +295,13 @@
         </ion-card>
       </form>
     </div>
-    <div class="print-preview">
-      <!-- <app-controleddd [toolRequest]="toolRequest"></app-controleddd> -->
-    </div>
+    <!-- <div class="print-preview">
+      <app-controleddd [toolRequest]="toolRequest"></app-controleddd>
+    </div> -->
   </div>
 </ion-content>
 <ion-footer>
   <app-tool-request-footer (evStatusChange)="onChangeStatut($event)" (evSubmit)="submitControlForm()"
-    (evUpdate)="updateForm()" [canManage]="canManage" [canUpdate]="canUpDate" [form]="controlForm">
+    (evUpdate)="updateToolRequestForm()" [canManage]="canManage" [canUpdate]="canUpDate" [form]="controlForm">
   </app-tool-request-footer>
 </ion-footer>
