--- a/src/app/pages/tool-request/_components/control3-d/control.page.scss
+++ b/src/app/pages/tool-request/_components/control3-d/control.page.scss
@@ -1,5 +1,28 @@
+.content-container {
+  display: flex;
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+}
+.control-form {
+  width: 100%;
+  height: 100%;
+}
 .main-form {
-  width: fit-content;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  .left-side {
+    max-width: 30%;
+  }
+  > * {
+    max-width: 100%;
+    max-height: 100%;
+    overflow: auto;
+  }
 }
 
 .flex-row {
@@ -8,20 +31,14 @@
   justify-content: space-between;
 }
 
-.content-container {
-  display: flex;
-  height: 100%;
-  overflow: hidden;
-}
-
-.control-form {
-  overflow-y: auto;
-}
-
 .print-preview {
   overflow-y: auto;
 }
 .vertical {
   display: flex;
   flex-direction: column;
+}
+.vertical *[contentEditable="true"]:focus,
+.vertical *[contentEditable="true"]:hover {
+  outline: 2px solid #1976d2;
 }
